test/Harper/Tests/Good/issue007_lam2.har
main :: Integer;
main = {
  var (x :: Integer) = 42;
  var (y :: Integer) = 3;
  var (z :: Integer) = 17;
  var (a :: Integer) = 7;
  (f :: Integer -> Integer -> Integer -> impure -> Integer) = 
    \(b :: Integer) (c :: Integer) (x :: Integer) => a * b + c - x + y * z;
  x += 1;
  y -= 50;
  z /= 4;
  a ^= 2;
  return f 1 2 3 ();
};