test/Harper/Tests/Bad/ApplyingTooManyArgumentsToAFunction.har
f :: Integer -> Integer -> Integer -> Integer;
f n = (\(x :: Integer) (y :: Integer) => n + x + y);

appMul :: Integer -> Integer -> Integer -> Integer -> Integer;
appMul a b = (\(n :: Integer) => f n (a * b));

main :: Integer;
main = appMul 7 17 42 5 1;